Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- image and photo widgets now display dims in pixels and show the current dim
  as preselected option in the resize control
Bug fixes:
~~~~~~~~~~
- Fixed the search popup for Internal Links box to search only in the current
  path using the "here" option (it used to search on the entire site)
- The title in the link widget was rendered as escaped (#898)
- #901: Field storage expression context's "proxy" variable is always None in
  read expressions
- internallinks popup now works on mozilla/firefox and looks better
- added an option to InternalLinks widget to display absolute urls in links
  (useful for CPSNewsletter)
- #920: removed "target=CPS_Link" for external links.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-